--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,6 @@
 </head>
 <body class="mat-typography">
   <app-root></app-root>
+  <script type="module" src="index.js"></script>
 </body>
 </html>
